--- a/deployment.yaml
+++ b/deployment.yaml
@@ -18,11 +18,11 @@ spec:
         app: flaskdemo
     spec:
       containers:
-      - image: fathytek/test:1
+      - image: vijay2181/argocd-demo:1
         name: flaskdemo
         resources: {}
 status: {}
----
+
 apiVersion: v1
 kind: Service
 metadata:
@@ -30,9 +30,11 @@ metadata:
   labels:
     app: lb-service
 spec:
-  type: LoadBalancer
+  type: NodePort  
   ports:
   - port: 80
     targetPort: 5000
+    nodePort: 30000  #Optional: specify a custom NodePort (range 30000-32767)
   selector:
     app: flaskdemo
+
