--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,40 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  creationTimestamp: null
-  labels:
-    app: flaskdemo
-  name: flaskdemo
+  name: flask-deployment
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: flaskdemo
-  strategy: {}
   template:
     metadata:
-      creationTimestamp: null
       labels:
         app: flaskdemo
     spec:
       containers:
-      - image: vijay4devops/argocd-demo:10
-        name: flaskdemo
-        resources: {}
-status: {}
-
+      - name: flaskdemo
+        image: vijay4devops/argocd-demo:10
+        imagePullPolicy: IfNotPresent
+        ports:
+        - containerPort: 80
+---
 apiVersion: v1
 kind: Service
 metadata:
-  name: lb-service
-  labels:
-    app: lb-service
+  name: flask-service
 spec:
-  type: NodePort  
-  ports:
-  - port: 80
-    targetPort: 5000
-    nodePort: 30000  #Optional: specify a custom NodePort (range 30000-32767)
+  type: NodePort
   selector:
     app: flaskdemo
-
+  ports:
+  - protocol: TCP
+    port: 80
+    targetPort: 5000
+    nodePort: 30000  # Exposes the service on <minikube-ip>:30080
