--- a/deployment.yaml
+++ b/deployment.yaml
@@ -13,6 +13,7 @@ spec:
       labels:
         app: flaskdemo
     spec:
+      serviceAccountName: argocd-sa  # Using the newly created ServiceAccount
       containers:
       - name: flaskdemo
         image: vijay1447/argocd-demo:14
